# yt-thumbnail-abtest

./: .env.example  .gitignore  Dockerfile  ecosystem.config.cjs  pyproject.toml  requirements.txt  vercel.json
app/: __init__.py  config.py  database.py  main.py  models.py
app/api/: deps.py  schemas.py  server.py
app/api/routers/: auth.py  backup.py  competitor.py  contact.py  cross_analysis.py  events.py  quota.py  report.py  settings.py  templates.py  tests.py  youtube_oauth.py
app/services/: analyzer.py  auth_service.py  chatwork.py  competitor_service.py  email_service.py  gemini_service.py  notifier.py  pdf_service.py  scheduler.py  slack_service.py  state_machine.py  statistics.py  youtube_analytics.py  youtube_api.py
frontend/: index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
frontend/src/: App.tsx  main.tsx
frontend/src/api/: client.ts  types.ts
frontend/src/components/: CalendarPicker.tsx  HeatmapGrid.tsx  Layout.tsx  ProtectedRoute.tsx  QuotaBar.tsx  StatusBadge.tsx  ThumbnailPreview.tsx  VelocityChart.tsx  WeightPresetSelector.tsx  WeightSliders.tsx
frontend/src/context/: AuthContext.tsx
frontend/src/i18n/: I18nContext.tsx  en.ts  ja.ts
frontend/src/pages/: Company.tsx  Competitor.tsx  Contact.tsx  CrossAnalysis.tsx  Dashboard.tsx  Help.tsx  Landing.tsx  Login.tsx  NewTest.tsx  Privacy.tsx  Register.tsx  Results.tsx  Settings.tsx  Terms.tsx  TestDetail.tsx
tests/: test_analyzer.py  test_config.py  test_models.py  test_state_machine.py
